--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": {
-    "/auth/*": {
-      "target": "http://localhost:5000"
-    }
-  }
+  "proxy": "http://localhost:5000"
 }
